// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 0,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "origin": undefined,
    "path": "/root",
    "visible": undefined,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 0,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": false,
    "length": 666.2768775266122,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "origin": undefined,
    "path": "/root",
    "visible": undefined,
    "width": 666.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "deltas": undefined,
    "depth": 1,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "origin": undefined,
    "path": "/root/big leaf",
    "visible": undefined,
    "width": 627.8768775266121,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 1,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "origin": undefined,
    "path": "/root/Parent Leaf",
    "visible": undefined,
    "width": 0,
    "x0": 656.6768775266122,
    "y0": 19.200000000000003,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 0,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": false,
    "length": 735.151015307185,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "origin": undefined,
    "path": "/root",
    "visible": undefined,
    "width": 735.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "deltas": undefined,
    "depth": 1,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 338.7755076535925,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "origin": undefined,
    "path": "/root/big leaf",
    "visible": undefined,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 1,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": false,
    "length": 338.77550765359246,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "origin": undefined,
    "path": "/root/Parent Leaf",
    "visible": undefined,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 377.17550765359255,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "deltas": undefined,
    "depth": 2,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "small leaf",
    "origin": undefined,
    "path": "/root/Parent Leaf/small leaf",
    "visible": undefined,
    "width": 184.06530459215554,
    "x0": 38.400000000000006,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "deltas": undefined,
    "depth": 2,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "other small leaf",
    "origin": undefined,
    "path": "/root/Parent Leaf/other small leaf",
    "visible": undefined,
    "width": 455.08571071502945,
    "x0": 241.66530459215554,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "deltas": undefined,
    "depth": 2,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "empty folder",
    "origin": undefined,
    "path": "/root/Parent Leaf/empty folder",
    "visible": undefined,
    "width": 0,
    "x0": 706.351015307185,
    "y0": 396.3755076535926,
    "z0": 4,
  },
]
`;
